# project-starters

./: .gitignore  CMakeLists.txt  README.md  main.cpp
hunter-starter/: CMakeLists.txt  main.c
imgui-hunter-starter/: CMakeLists.txt
magnum-hunter-starter/: CMakeLists.txt  PrimitivesExample.cpp
magnum-hunter-starter/bu/: CMakeCache.txt
opengl-hunter-starter/: CMakeLists.txt
opengl-starter/: CMakeLists.txt  Readme.md
opengl-starter/cmake/: FindASSIMP.cmake  FindGLFW3.cmake  FindGLM.cmake
sdl-starter/: CMakeLists.txt  Game.cpp  Game.h  README.md
sdl-starter/src/: main.cpp
src/: Game.cpp  Game.h
